unpackaged/main/default/objects/Lead/fields/CalendlyCreated__c.field-meta.xml
<CustomField>
    <fullName>CalendlyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CalendlyCreated</label>
    <type>Checkbox</type>
</CustomField>