unpackaged/main/default/objects/Lead/fields/Customer_segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_segment__c</fullName>
    <formula>IF( Strategic__c , "Enterprise",
IF( ISPICKVAL(Type__c, "Implementation Partner"), "Implementation Partner",
IF( NumberOfEmployees = 0, "",
IF( NumberOfEmployees &lt; 500, "SMB", 
IF( NumberOfEmployees &lt; 10000, "MidMarket",
"Enterprise")
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer segment</label>
    <type>Text</type>
</CustomField>