unpackaged/main/default/objects/Lead/fields/Deal_Quality__c.field-meta.xml
<CustomField>
    <fullName>Deal_Quality__c</fullName>
    <description>Calculate the quality of the deal based off the country the user signed up from.</description>
    <formula>CASE(1,
IF (OR(ISPICKVAL(Sign_In_Country__c, &quot;&quot;), ISPICKVAL(Sign_In_Country__c, &quot;Unknown&quot;)), 1, 0), TEXT(Rating),
IF (CONTAINS($Label.Countries_Tier_1, TEXT(Sign_In_Country__c) + &quot;;&quot;), 1, 0), &quot;Tier1&quot;,
IF (CONTAINS($Label.Countries_Tier_2, TEXT(Sign_In_Country__c) + &quot;;&quot;), 1, 0), &quot;Tier2&quot;,
IF (CONTAINS($Label.Countries_Tier_3, TEXT(Sign_In_Country__c) + &quot;;&quot;), 1, 0), &quot;Tier3&quot;,
IF (CONTAINS($Label.Countries_Tier_4, TEXT(Sign_In_Country__c) + &quot;;&quot;), 1, 0), &quot;Tier4&quot;,
IF (CONTAINS($Label.Countries_Tier_5, TEXT(Sign_In_Country__c) + &quot;;&quot;), 1, 0), &quot;Tier5&quot;,
&quot;Unknown&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the quality of the deal based off the country the user signed up from.</inlineHelpText>
    <label>Deal Quality</label>
    <type>Text</type>
</CustomField>