unpackaged/main/default/objects/Lead/fields/Discovery_notes__c.field-meta.xml
<CustomField>
    <fullName>Discovery_notes__c</fullName>
    <inlineHelpText>Miscellaneous notes that doesn&#39;t fit in the previous categories. Any other information that could be helpful for future reference?</inlineHelpText>
    <label>Discovery notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>