unpackaged/main/default/objects/Lead/fields/Email_domain__c.field-meta.xml
<CustomField>
    <fullName>Email_domain__c</fullName>
    <formula>RIGHT(Email, LEN(Email) - FIND(&quot;@&quot;, Email))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email domain</label>
    <type>Text</type>
</CustomField>