unpackaged/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <displayFormat>Lead-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Lead ID</label>
    <type>AutoNumber</type>
</CustomField>