unpackaged/main/default/objects/Lead/fields/No_of_people_making_changes_to_SF__c.field-meta.xml
<CustomField>
    <fullName>No_of_people_making_changes_to_SF__c</fullName>
    <inlineHelpText>Number of Salesforce End Users making changes to Salesforce</inlineHelpText>
    <label>Number of people making changes to SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>