unpackaged/main/default/objects/Lead/fields/NumberOfSFUsers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSFUsers__c</fullName>
    <inlineHelpText>This field is required before the lead is converted. If you tried and really cannot get this value please enter -1</inlineHelpText>
    <label>No. of Salesforce end users</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>