unpackaged/main/default/objects/Lead/fields/Pains_and_aims__c.field-meta.xml
<CustomField>
    <fullName>Pains_and_aims__c</fullName>
    <inlineHelpText>Why have they started looking at Gearset?</inlineHelpText>
    <label>Pains and aims</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>