unpackaged/main/default/objects/Lead/fields/PPC_Source__c.field-meta.xml
<CustomField>
    <fullName>PPC_Source__c</fullName>
    <description>The Pay-Per-Click marketing source for the lead.</description>
    <inlineHelpText>The Pay-Per-Click marketing source for the lead.</inlineHelpText>
    <label>PPC Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PPC_Sources</valueSetName>
    </valueSet>
</CustomField>