unpackaged/main/default/objects/Lead/fields/Pre_call_notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_call_notes__c</fullName>
    <inlineHelpText>Have they connected to orgs? Have any other users connected to the team? What features have they used so far in their trail?</inlineHelpText>
    <label>Pre-call notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>