unpackaged/main/default/objects/Lead/fields/Referral_Extra_Details__c.field-meta.xml
<CustomField>
    <fullName>Referral_Extra_Details__c</fullName>
    <label>Referral Extra Details</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>