unpackaged/main/default/objects/Lead/fields/Referrer_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Company_Name__c</fullName>
    <label>Referrer Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>