unpackaged/main/default/objects/Lead/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <label>Referrer Email</label>
    <type>Email</type>
</CustomField>