unpackaged/main/default/objects/Lead/fields/Referrer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_First_Name__c</fullName>
    <label>Referrer First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>