unpackaged/main/default/objects/Lead/fields/Referrer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Last_Name__c</fullName>
    <label>Referrer Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>