unpackaged/main/default/objects/Lead/fields/Reopen_if_logs_in__c.field-meta.xml
<CustomField>
    <fullName>Reopen_if_logs_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only important if the lead is marked as lost. If this field is ticked, then upon the lead logging in, it&#39;ll open it again and notify the lead owner.</description>
    <label>Reopen if logs in</label>
    <type>Checkbox</type>
</CustomField>