unpackaged/main/default/objects/Lead/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <description>A field to indicate the Sales Engineer who has been assigned to the Lead.</description>
    <label>Sales Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Engineer</valueSetName>
    </valueSet>
</CustomField>