unpackaged/main/default/objects/Lead/fields/Sign_In_Country__c.field-meta.xml
<CustomField>
    <fullName>Sign_In_Country__c</fullName>
    <description>The country retrieved from the lead&#39;s IP address when they sign-up. It is set when a user account is first created and updated in the scenario where a user account is updated when logging in to the Gearset app.</description>
    <inlineHelpText>The country retrieved from the lead&#39;s IP address when they sign-up. It is set when a user account is first created and updated in the scenario where a user account is updated when logging in to the Gearset app.</inlineHelpText>
    <label>Sign-In Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>