unpackaged/main/default/objects/Lead/fields/Team_Structure__c.field-meta.xml
<CustomField>
    <fullName>Team_Structure__c</fullName>
    <inlineHelpText>What is their current team structure?</inlineHelpText>
    <label>Team Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>