unpackaged/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Customer</fullName>
            </value>
            <value>
                <fullName>Implementation Partner</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>MVP</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>