unpackaged/main/default/objects/Lead/validationRules/Lead_must_have_a_Lead_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_must_have_a_Lead_Source</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(LeadSource)) &amp;&amp; !ISPICKVAL(Status, 'New')</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Leads must have a Lead Source</errorMessage>
</ValidationRule>