unpackaged/main/default/objects/Lead/validationRules/Lost_Reason_Other_Must_Given_A_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_Other_Must_Given_A_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Lost_Reason__c, 'Other...') &amp;&amp;
   ISBLANK(Lost_Reason_Notes__c)</errorConditionFormula>
    <errorDisplayField>Lost_Reason_Notes__c</errorDisplayField>
    <errorMessage>Must fill in notes if lost for reason 'other...'</errorMessage>
</ValidationRule>