unpackaged/main/default/objects/Lead/validationRules/Must_Give_Reason_Before_Marking_As_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Give_Reason_Before_Marking_As_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &#39;Lost&#39;) &amp;&amp; ISPICKVAL(Lost_Reason__c, &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Must select a lost reason before marking the lead as lost</errorMessage>
</ValidationRule>