unpackaged/main/default/objects/Lead/validationRules/Must_have_an_industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_an_industry</fullName>
    <active>true</active>
    <description>Leads must have an industry set before they can be progressed to &#39;customer replied&#39;</description>
    <errorConditionFormula>ISPICKVAL(Industry, &#39;&#39;) &amp;&amp; (
   !ISPICKVAL(Status, &#39;New&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Ready for SDR&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Researched&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Lost&#39;)
)</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Leads must have an industry before they can be progressed to &#39;customer replied&#39;</errorMessage>
</ValidationRule>