unpackaged/main/default/objects/Lead/validationRules/Must_have_contact_details.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_contact_details</fullName>
    <active>true</active>
    <description>Leads must have some contact details set before they can be progressed</description>
    <errorConditionFormula>$Profile.Name != &#39;System Administrator&#39; &amp;&amp;
(
ISBLANK(Phone) &amp;&amp; ISBLANK(Email) 
)
&amp;&amp;
(
!ISPICKVAL(Status, &#39;New&#39;) &amp;&amp;
!ISPICKVAL(Status, &#39;Ready for SDR&#39;) &amp;&amp;
!ISPICKVAL(Status, &#39;Researched&#39;) &amp;&amp;
!ISPICKVAL(Status, &#39;Lost&#39;)
)</errorConditionFormula>
    <errorMessage>Leads must have some contact details (phone number or email) before they can be progressed to &#39;Customer Replied&#39;</errorMessage>
</ValidationRule>