unpackaged/main/default/objects/Lead/validationRules/Must_have_job_title_before_convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_job_title_before_convert</fullName>
    <active>true</active>
    <description>Ensures that the lead has a job title upon conversion.</description>
    <errorConditionFormula>IsConverted &amp;&amp; ISBLANK(Title) &amp;&amp; $Profile.Name != &#39;System Administrator&#39;</errorConditionFormula>
    <errorDisplayField>Title</errorDisplayField>
    <errorMessage>This lead must have a job title filled in before it can be converted.</errorMessage>
</ValidationRule>