unpackaged/main/default/objects/Lead/validationRules/Must_have_number_of_employees.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_number_of_employees</fullName>
    <active>true</active>
    <description>Leads must have number of employees set before they can be progressed</description>
    <errorConditionFormula>(
  ISBLANK(NumberOfEmployees) || NumberOfEmployees == 0
)
&amp;&amp;
(
   !ISPICKVAL(Status, &#39;New&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Ready for SDR&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Researched&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Lost&#39;)
)</errorConditionFormula>
    <errorDisplayField>NumberOfEmployees</errorDisplayField>
    <errorMessage>Leads must have a number of employees before they can be progressed to &#39;Customer Replied&#39;</errorMessage>
</ValidationRule>