unpackaged/main/default/objects/Lead/validationRules/Must_have_website.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_website</fullName>
    <active>true</active>
    <description>All leads must have a website in order to progress from &#39;New&#39;</description>
    <errorConditionFormula>ISBLANK(Website) &amp;&amp; (
   !ISPICKVAL(Status, &#39;New&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Ready for SDR&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Researched&#39;) &amp;&amp;
   !ISPICKVAL(Status, &#39;Lost&#39;)
)</errorConditionFormula>
    <errorDisplayField>Website</errorDisplayField>
    <errorMessage>Leads must have a website before you can progress to &#39;Customer Replied&#39;. Use unknown.example.com if there is no sensible website to use for this lead.</errorMessage>
</ValidationRule>