unpackaged/main/default/objects/Lead/validationRules/Must_select_a_converted_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_select_a_converted_status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &#39;Please select converted status&#39;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Please select a converted status</errorMessage>
</ValidationRule>