unpackaged/main/default/objects/Lead/validationRules/NumberOf_EmployeeIsFilledIn.validationRule-meta.xml
<ValidationRule>
    <fullName>NumberOf_EmployeeIsFilledIn</fullName>
    <active>true</active>
    <description>We want a validation rule that enforces all leads beyond New need to have an employee size</description>
    <errorConditionFormula>NOT(ISPICKVAL(Status, &quot;New&quot;) || ISPICKVAL(Status, &quot;Ready for SDR&quot;) || ISPICKVAL(Status, &quot;Lost&quot;))
&amp;&amp; ISBLANK(NumberOfEmployees)</errorConditionFormula>
    <errorMessage>Please fill out the estimate of number of employees</errorMessage>
</ValidationRule>