unpackaged/main/default/objects/Lead/listViews/All_open_leads.listView-meta.xml
<ListView>
    <fullName>All_open_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Demo Booked,Lost,Existing Account,No Demo - Provided Enough Info,Qualified as Expansion Opportunity</value>
    </filters>
    <label>All open leads</label>
</ListView>